diesel_compile_tests/tests/fail/update_statement_does_not_support_returning_methods_on_sqlite.stderr
error[E0277]: the trait bound `Sqlite: SupportsReturningClause` is not satisfied
  --> $DIR/update_statement_does_not_support_returning_methods_on_sqlite.rs:18:10
   |
18 |         .get_result(&mut connection);
   |          ^^^^^^^^^^ the trait `SupportsReturningClause` is not implemented for `Sqlite`
   |
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>>`
   = note: required because of the requirements on the impl of `LoadQuery<diesel::SqliteConnection, _>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>`

error[E0277]: the trait bound `Sqlite: SupportsReturningClause` is not satisfied
  --> $DIR/update_statement_does_not_support_returning_methods_on_sqlite.rs:23:10
   |
23 |         .get_result(&mut connection);
   |          ^^^^^^^^^^ the trait `SupportsReturningClause` is not implemented for `Sqlite`
   |
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<columns::name>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<columns::name>>`
   = note: required because of the requirements on the impl of `LoadQuery<diesel::SqliteConnection, _>` for `UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<columns::name>>`
